--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
-<title>Mood Meter</title>
+<title>Mood Meter v2</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
 
@@ -484,55 +484,50 @@
   }
 
   .meter-container.blob-active {
-    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cellipse cx='12' cy='12' rx='9' ry='8' fill='%23e94560' opacity='0.85' /%3E%3Cellipse cx='12' cy='12' rx='9' ry='8' fill='url(%23g)' opacity='0.7' /%3E%3Ccircle cx='9' cy='10' r='1.5' fill='%233a2030'/%3E%3Ccircle cx='15' cy='10' r='1.5' fill='%233a2030'/%3E%3Cpath d='M9 15 Q12 17 15 15' stroke='%233a2030' stroke-width='1.2' fill='none' stroke-linecap='round'/%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='1' y2='1'%3E%3Cstop offset='0%25' stop-color='%23e94560'/%3E%3Cstop offset='100%25' stop-color='%23f7b731'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E") 12 12, crosshair;
-  }
-  body.dark .meter-container.blob-active {
-    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cellipse cx='12' cy='12' rx='9' ry='8' fill='%238fbcbc' opacity='0.85' /%3E%3Cellipse cx='12' cy='12' rx='9' ry='8' fill='url(%23g)' opacity='0.7' /%3E%3Ccircle cx='9' cy='10' r='1.5' fill='%231e0f18'/%3E%3Ccircle cx='15' cy='10' r='1.5' fill='%231e0f18'/%3E%3Cpath d='M9 15 Q12 17 15 15' stroke='%231e0f18' stroke-width='1.2' fill='none' stroke-linecap='round'/%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='1' y2='1'%3E%3Cstop offset='0%25' stop-color='%238fbcbc'/%3E%3Cstop offset='100%25' stop-color='%23a55eea'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E") 12 12, crosshair;
+    cursor: none;
   }
 
   .placement-marker {
     display: none;
     position: absolute;
-    width: 28px;
-    height: 28px;
+    width: 36px;
+    height: 36px;
     transform: translate(-50%, -50%);
     border-radius: 50% 40% 50% 45%;
     background: linear-gradient(135deg, #e94560, #f7b731);
     z-index: 2;
-    cursor: grab;
     box-shadow: 0 0 8px rgba(233, 69, 96, 0.4);
-    animation: wobble 2s ease-in-out infinite;
-    pointer-events: auto;
+    animation-name: wobble;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    pointer-events: none;
+    overflow: visible;
   }
-  .placement-marker::before {
-    content: '';
+  .blob-eye {
     position: absolute;
-    top: 8px;
-    left: 6px;
-    width: 4px;
-    height: 4px;
+    top: 10px;
+    width: 5px;
+    height: 5px;
     background: #3a2030;
     border-radius: 50%;
-    box-shadow: 10px 0 0 #3a2030;
+    pointer-events: none;
+    transition: height 0.15s, top 0.15s;
   }
-  .placement-marker::after {
-    content: '';
+  .blob-eye-l { left: 8px; }
+  .blob-eye-r { right: 8px; }
+  .blob-mouth {
     position: absolute;
     bottom: 5px;
     left: 50%;
     transform: translateX(-50%);
-    width: 8px;
-    height: 4px;
+    width: 12px;
+    height: 6px;
     border: 2px solid #3a2030;
     border-top: none;
-    border-radius: 0 0 8px 8px;
-  }
-  .placement-marker.dragging {
-    cursor: grabbing;
-    animation: wobble-drag 0.6s ease-in-out infinite;
-  }
-  .placement-marker.squish {
-    animation: squish 0.35s ease-out;
+    border-radius: 0 0 12px 12px;
+    pointer-events: none;
+    transition: transform 0.15s;
   }
   @keyframes wobble {
     0%   { transform: translate(-50%, -50%) rotate(0deg);   border-radius: 50% 40% 50% 45%; }
@@ -541,27 +536,15 @@
     75%  { transform: translate(-50%, -50%) rotate(2deg);   border-radius: 50% 40% 45% 50%; }
     100% { transform: translate(-50%, -50%) rotate(0deg);   border-radius: 50% 40% 50% 45%; }
   }
-  @keyframes wobble-drag {
-    0%   { transform: translate(-50%, -50%) scaleX(1.15) scaleY(0.9) rotate(0deg); }
-    50%  { transform: translate(-50%, -50%) scaleX(0.9) scaleY(1.1) rotate(2deg); }
-    100% { transform: translate(-50%, -50%) scaleX(1.15) scaleY(0.9) rotate(0deg); }
-  }
-  @keyframes squish {
-    0%   { transform: translate(-50%, -50%) scale(0.5); }
-    40%  { transform: translate(-50%, -50%) scaleX(1.3) scaleY(0.75); }
-    70%  { transform: translate(-50%, -50%) scaleX(0.9) scaleY(1.1); }
-    100% { transform: translate(-50%, -50%) scale(1); }
-  }
 
   body.dark .placement-marker {
     background: linear-gradient(135deg, #8fbcbc, #a55eea);
     box-shadow: 0 0 8px rgba(143, 188, 188, 0.4);
   }
-  body.dark .placement-marker::before {
+  body.dark .blob-eye {
     background: #1e0f18;
-    box-shadow: 10px 0 0 #1e0f18;
   }
-  body.dark .placement-marker::after {
+  body.dark .blob-mouth {
     border-color: #1e0f18;
   }
 
@@ -629,7 +612,11 @@
   <span class="placeholder-text" id="placeholder">
     Add mood-meter.png to this directory to set the background image
   </span>
-  <div class="placement-marker" id="placement-marker"></div>
+  <div class="placement-marker" id="placement-marker">
+    <div class="blob-eye blob-eye-l"></div>
+    <div class="blob-eye blob-eye-r"></div>
+    <div class="blob-mouth"></div>
+  </div>
 </div>
 <div class="meter-filters" id="meter-filters">
   <label class="meter-filter"><input type="checkbox" value="yapstoner" checked> Yapstoners</label>
@@ -822,7 +809,6 @@
   // Placement marker logic
   const placementMarker = document.getElementById('placement-marker');
   const blobToggle = document.getElementById('blob-toggle');
-  let dragging = false;
   let blobMode = false;
 
   function percentToCoord(leftPct, topPct) {
@@ -840,52 +826,38 @@
     return { leftPct, topPct };
   }
 
-  function placeMarkerAt(leftPct, topPct) {
+  function updateBlobMood(x, y) {
+    // Color: red at x=-10, yellow at x=0, green at x=10
+    var hue = Math.round(((x + 10) / 20) * 120);
+    placementMarker.style.background = 'hsl(' + hue + ', 70%, 50%)';
+  }
+
+  // Blob follows cursor over the meter image
+  meter.addEventListener('mousemove', function(e) {
+    if (!blobMode) return;
+    var leftPct = positionFromEvent(e).leftPct;
+    var topPct = positionFromEvent(e).topPct;
     placementMarker.style.left = leftPct + '%';
     placementMarker.style.top = topPct + '%';
-    placementMarker.style.display = '';
-    const { x, y } = percentToCoord(leftPct, topPct);
-    xInput.value = x;
-    yInput.value = y;
-    placementMarker.classList.add('squish');
-    placementMarker.addEventListener('animationend', function handler() {
-      placementMarker.classList.remove('squish');
-      placementMarker.removeEventListener('animationend', handler);
-    });
-  }
-
-  meter.addEventListener('click', e => {
-    if (!blobMode) return;
-    if (dragging) return;
-    if (e.target === placementMarker || placementMarker.contains(e.target)) return;
-    const { leftPct, topPct } = positionFromEvent(e);
-    placeMarkerAt(leftPct, topPct);
+    placementMarker.style.display = 'block';
+    var coords = percentToCoord(leftPct, topPct);
+    updateBlobMood(coords.x, coords.y);
   });
 
-  function onDragStart(e) {
-    e.preventDefault();
-    e.stopPropagation();
-    dragging = true;
-    placementMarker.classList.add('dragging');
-  }
-  function onDragMove(e) {
-    if (!dragging) return;
-    e.preventDefault();
-    const { leftPct, topPct } = positionFromEvent(e);
-    placeMarkerAt(leftPct, topPct);
-  }
-  function onDragEnd() {
-    if (!dragging) return;
-    dragging = false;
-    placementMarker.classList.remove('dragging');
-  }
+  meter.addEventListener('mouseleave', function() {
+    if (!blobMode) return;
+    placementMarker.style.display = 'none';
+  });
 
-  placementMarker.addEventListener('mousedown', onDragStart);
-  placementMarker.addEventListener('touchstart', onDragStart, { passive: false });
-  document.addEventListener('mousemove', onDragMove);
-  document.addEventListener('touchmove', onDragMove, { passive: false });
-  document.addEventListener('mouseup', onDragEnd);
-  document.addEventListener('touchend', onDragEnd);
+  // Click locks the coordinates into the input fields
+  meter.addEventListener('click', function(e) {
+    if (!blobMode) return;
+    var leftPct = positionFromEvent(e).leftPct;
+    var topPct = positionFromEvent(e).topPct;
+    var coords = percentToCoord(leftPct, topPct);
+    xInput.value = coords.x;
+    yInput.value = coords.y;
+  });
 
   function onCoordInput() {
     if (!blobMode) return;
@@ -897,7 +869,8 @@
     const { left, top } = coordToPercent(cx, cy);
     placementMarker.style.left = left + '%';
     placementMarker.style.top = top + '%';
-    placementMarker.style.display = '';
+    placementMarker.style.display = 'block';
+    updateBlobMood(cx, cy);
   }
   xInput.addEventListener('input', onCoordInput);
   yInput.addEventListener('input', onCoordInput);
