--- a/index.html
+++ b/index.html
@@ -518,23 +518,23 @@
   .blob-eye-r { right: 8px; }
   .blob-mouth {
     position: absolute;
-    bottom: 5px;
+    bottom: 7px;
     left: 50%;
     transform: translateX(-50%);
     width: 12px;
-    height: 6px;
-    border: 2px solid #3a2030;
-    border-top: none;
-    border-radius: 0 0 12px 12px;
+    height: 0px;
+    border-bottom: 2px solid #3a2030;
+    border-radius: 0;
     pointer-events: none;
-    transition: transform 0.15s;
+    transition: height 0.15s, border-radius 0.15s;
   }
   @keyframes wobble {
-    0%   { transform: translate(-50%, -50%) rotate(0deg);   border-radius: 50% 40% 50% 45%; }
-    25%  { transform: translate(-50%, -50%) rotate(3deg);   border-radius: 45% 50% 40% 50%; }
-    50%  { transform: translate(-50%, -50%) rotate(-2deg);  border-radius: 40% 45% 50% 40%; }
-    75%  { transform: translate(-50%, -50%) rotate(2deg);   border-radius: 50% 40% 45% 50%; }
-    100% { transform: translate(-50%, -50%) rotate(0deg);   border-radius: 50% 40% 50% 45%; }
+    0%   { transform: translate(-50%, -50%) translate(0px, 0px) rotate(0deg) scale(1);       border-radius: 50% 40% 50% 45%; }
+    20%  { transform: translate(-50%, -50%) translate(3px, -2px) rotate(8deg) scale(1.05);    border-radius: 45% 50% 40% 50%; }
+    40%  { transform: translate(-50%, -50%) translate(-3px, 2px) rotate(-6deg) scale(0.95);   border-radius: 40% 45% 55% 40%; }
+    60%  { transform: translate(-50%, -50%) translate(2px, 3px) rotate(5deg) scale(1.08);     border-radius: 55% 40% 45% 50%; }
+    80%  { transform: translate(-50%, -50%) translate(-2px, -3px) rotate(-7deg) scale(0.96);  border-radius: 45% 55% 40% 45%; }
+    100% { transform: translate(-50%, -50%) translate(0px, 0px) rotate(0deg) scale(1);        border-radius: 50% 40% 50% 45%; }
   }
 
   body.dark .placement-marker {
@@ -634,7 +634,7 @@
       <option value="yapnt">Yapn't</option>
     </select>
   </div>
-  <button type="button" class="btn-blob" id="blob-toggle">Blob Mode: OFF</button>
+  <button type="button" class="btn-blob" id="blob-toggle">Summon the Little Guy</button>
   <form id="mood-form">
     <div class="input-row">
       <div class="input-group" style="flex:2;" id="id-group">
@@ -721,6 +721,7 @@
   const colors = ['#6b1d3a', '#5f9e9e', '#f7b731', '#e94560', '#a55eea'];
   let last = 0;
   document.addEventListener('mousemove', e => {
+    if (document.querySelector('.meter-container.blob-active')) return;
     const now = Date.now();
     if (now - last < 50) return;
     last = now;
@@ -809,6 +810,7 @@
   // Placement marker logic
   const placementMarker = document.getElementById('placement-marker');
   const blobToggle = document.getElementById('blob-toggle');
+  const blobMouth = placementMarker.querySelector('.blob-mouth');
   let blobMode = false;
 
   function percentToCoord(leftPct, topPct) {
@@ -830,6 +832,18 @@
     // Color: red at x=-10, yellow at x=0, green at x=10
     var hue = Math.round(((x + 10) / 20) * 120);
     placementMarker.style.background = 'hsl(' + hue + ', 70%, 50%)';
+
+    // Mouth: flat line at x=-10, full smile at x=10
+    var t = (x + 10) / 20; // 0 to 1
+    var curveH = Math.round(t * 6); // 0px (flat) to 6px (deep smile)
+    var curveR = Math.round(t * 12); // 0 (straight) to 12px (round)
+    blobMouth.style.height = curveH + 'px';
+    blobMouth.style.borderRadius = '0 0 ' + curveR + 'px ' + curveR + 'px';
+
+    // Vibrate: calm at bottom, frantic at top
+    var energy = (y + 10) / 20; // 0 to 1
+    var speed = 2 - energy * 1.8; // 2s (slow) to 0.2s (frantic)
+    placementMarker.style.animationDuration = speed + 's';
   }
 
   // Blob follows cursor over the meter image
@@ -877,7 +891,7 @@
 
   blobToggle.addEventListener('click', () => {
     blobMode = !blobMode;
-    blobToggle.textContent = blobMode ? 'Blob Mode: ON' : 'Blob Mode: OFF';
+    blobToggle.textContent = blobMode ? 'Dismiss the Little Guy' : 'Summon the Little Guy';
     blobToggle.classList.toggle('active', blobMode);
     meter.classList.toggle('blob-active', blobMode);
     if (!blobMode) {
@@ -1104,7 +1118,7 @@
     yInput.value = '';
     placementMarker.style.display = 'none';
     blobMode = false;
-    blobToggle.textContent = 'Blob Mode: OFF';
+    blobToggle.textContent = 'Summon the Little Guy';
     blobToggle.classList.remove('active');
     meter.classList.remove('blob-active');
   });
